--- a/strapi-cms/strapi/app/api/post/models/post.settings.json
+++ b/strapi-cms/strapi/app/api/post/models/post.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "posts",
   "info": {
-    "name": "post"
+    "name": "post",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -21,6 +22,9 @@
     },
     "postContent": {
       "type": "richtext"
+    },
+    "slug": {
+      "type": "string"
     }
   }
 }
