--- a/svelte-frontend/package.json
+++ b/svelte-frontend/package.json
@@ -19,6 +19,7 @@
 		"commonmark": "^0.29.3",
 		"feather-icons": "^4.28.0",
 		"jquery": "^3.6.0",
+		"node-fetch": "^2.6.1",
 		"popper.js": "^2.0.0-next.4"
 	}
 }
